# fantasy-express-diceroller

./: .gitignore  Cargo.toml  LICENSE  README.md  RULES_REFERENCE.md  fantasy-express-bot.service.example  fantasy_express_raw.txt
src/: main.rs
src/commands/: mod.rs
src/dice/: feat.rs  mod.rs  roll.rs
